Update GetTcpInfo to work on the updated Android NDK

Remove the check that the length of the TcpInfo
struct matches the count of bytes written by the
SysCall.

Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester
Bug: 799989
Change-Id: I6b3273fb391f56e38691fe975f6640883afe314d
Reviewed-on: https://chromium-review.googlesource.com/855502
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528185}
Former-commit-id: e36036f34eb60ba6905e2628924094d216e36937